--- a/src/vbPixelGameEngine.Maui.vbproj
+++ b/src/vbPixelGameEngine.Maui.vbproj
@@ -21,14 +21,12 @@
     <DefaultItemExcludes>$(DefaultItemExcludes);$(ProjectDir)**\*.cs</DefaultItemExcludes>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Maui.Core" Version="13.0.0" />
     <PackageReference Include="Microsoft.Maui.Controls" Version="10.0.30" />
     <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="10.0.30" />
     <PackageReference Include="SixLabors.Fonts" Version="2.1.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
     <PackageReference Include="SkiaSharp" Version="3.119.1" />
     <PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="3.119.1" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net10.0-android' or '$(TargetFramework)' == 'net10.0-windows10.0.19041.0'">
-    <PackageReference Include="GlobalKeyboardCapture.Maui" Version="1.0.2" />
   </ItemGroup>
 </Project>
