--- a/src/vbPixelGameEngine.Maui.vbproj
+++ b/src/vbPixelGameEngine.Maui.vbproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="10.0.30" />
     <PackageReference Include="SixLabors.Fonts" Version="2.1.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.3" />
     <PackageReference Include="SkiaSharp" Version="3.119.1" />
     <PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="3.119.1" />
   </ItemGroup>
